<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Awesome hello world application</string>
    <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>
    <string name="buttons_fragment_title">Buttons</string>
    <string name="buttons_input_title">Input fields</string>
    <string name="buttons_check_title">Check fields</string>
    <string name="image_earth">image_earth</string>
    <string name="second_part_of_title">WORLD</string>
    <string name="first_part_of_title">HELLO</string>
    <string name="first_btn_caption">Buttons and Stools</string>
    <string name="second_btn_caption">Grazing fields input</string>
    <string name="third_btn_caption">Checkbox on Radio</string>
    <string name="action_button">ActionButton</string>
    <string name="buttons_description">The plus button adds a new button to the container at the top</string>
    <string name="description_inputs_text">Different types of input fields</string>
    <string name="one_line_input_text">Single line text</string>
    <string name="five_line_input_text">Multiline text</string>
    <string name="password_input_text">password</string>
    <string name="numbers_input_text">numbers</string>
    <string name="button_hide_kb_text">Hide keyboard</string>
    <string name="rv_item_name">Button number</string>
    <string name="inputs_header_text">The Gauges button displays the gauges.</string>
    <string name="tools_cb_text">Gauges</string>
    <string name="radio_cb_text">Turn on the radio</string>
    <string name="enable_seek_cb_text">Enable slider</string>
    <string name="radio_inputs_text">Select a variant on the radio</string>
    <string name="seek_bar_text">Select an option with the slider</string>
    <string name="rb_1_text">Option 1</string>
    <string name="rb_2_text">Option 2</string>
    <string name="rb_3_text">Option 3</string>
</resources>