<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.check.CheckFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/checkToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@id/checkTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/checkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:text="@string/inputs_header_text"
        android:textSize="@dimen/text_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkToolbar"
        tools:ignore="SmallSp" />

    <CheckBox
        android:id="@+id/checkCheckBoxTools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:button="@drawable/checkbox_background"
        android:buttonTint="@color/light_blue"
        android:fontFamily="sans-serif-smallcaps"
        android:layoutDirection="rtl"
        android:text="@string/tools_cb_text"
        android:textSize="@dimen/text_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTitle"
        app:layout_constraintWidth_percent=".7" />

    <CheckBox
        android:id="@+id/checkCheckBoxRadio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:button="@drawable/checkbox_background"
        android:buttonTint="@color/light_blue"
        android:fontFamily="sans-serif-smallcaps"
        android:layoutDirection="rtl"
        android:text="@string/radio_cb_text"
        android:textSize="@dimen/text_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCheckBoxTools"
        app:layout_constraintWidth_percent=".7" />

    <CheckBox
        android:id="@+id/checkCheckBoxSeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:button="@drawable/checkbox_background"
        android:buttonTint="@color/light_blue"
        android:fontFamily="sans-serif-smallcaps"
        android:layoutDirection="rtl"
        android:text="@string/enable_seek_cb_text"
        android:textSize="@dimen/text_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCheckBoxRadio"
        app:layout_constraintWidth_percent=".7" />

    <TextView
        android:id="@+id/checkRadioGroupSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/radio_inputs_text"
        android:textSize="@dimen/text_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkCheckBoxSeek"
        tools:ignore="SmallSp" />

    <RadioGroup
        android:id="@+id/checkRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkRadioGroupSubtitle">

        <RadioButton
            android:id="@+id/checkRadioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/light_blue"
            android:text="@string/rb_1_text" />

        <RadioButton
            android:id="@+id/checkRadioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/light_blue"
            android:text="@string/rb_2_text" />

        <RadioButton
            android:id="@+id/checkRadioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/light_blue"
            android:text="@string/rb_3_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/checkSeekBarSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:text="@string/seek_bar_text"
        android:textSize="@dimen/text_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkRadioGroup"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/checkSeekBar"
        android:layout_width="@dimen/seek_width_350"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:max="3"
        android:progressTint="@color/light_blue"
        android:thumb="@drawable/seekbar_thumb"
        android:tickMark="@drawable/seekbar_tickmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkSeekBarSubtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>