<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainFragment">

    <TextView
        android:id="@+id/parentLayoutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:fontFamily="serif"
        android:text="@string/first_part_of_title"
        android:textSize="@dimen/text_44"
        app:layout_constraintBottom_toTopOf="@+id/parentLayoutImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/parentLayoutImage"
        android:layout_width="@dimen/image_width_200"
        android:layout_height="@dimen/image_height_200"
        android:contentDescription="@string/image_earth"
        android:src="@drawable/main_fragment_image_earth"
        app:layout_constraintBottom_toTopOf="@id/parentLayoutSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentLayoutHeader" />

    <TextView
        android:id="@+id/parentLayoutSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:fontFamily="serif"
        android:text="@string/second_part_of_title"
        android:textSize="@dimen/text_44"
        app:layout_constraintBottom_toTopOf="@id/parentLayoutButtonOpenButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentLayoutImage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parentLayoutButtonOpenButtons"
        android:layout_width="@dimen/main_button_wight"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button_background"
        android:text="@string/first_btn_caption"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/parentLayoutButtonOpenInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentLayoutSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parentLayoutButtonOpenInputs"
        android:layout_width="@dimen/main_button_wight"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/main_button_background"
        android:text="@string/second_btn_caption"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentLayoutButtonOpenButtons" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parentLayoutButtonOpenRadio"
        android:layout_width="@dimen/main_button_wight"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/main_button_background"
        android:text="@string/third_btn_caption"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentLayoutButtonOpenInputs" />

</androidx.constraintlayout.widget.ConstraintLayout>